--- a/style.css
+++ b/style.css
@@ -32,18 +32,17 @@ body {
     margin: 5px 0;
 }
 .social-links {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 24px;
     text-align: center;
 }
 .social-links a {
-    margin: 0 10px;
-    font-size: 24px;
-    color: #007bff;
-    text-decoration: none;
-    transition: color 0.3s;
+    color: #333;
 }
-.social-links a:hover{
-    color: #0056b3;
-}
+
 .buttons {
     text-align: center;
     margin-top: 10px;
