--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  padding: 170px;
 }
 .card {
     background-color: #ffffff;
@@ -67,7 +68,7 @@ body {
     flex-wrap: wrap;
     padding: 20px;
 }
-.card {
+.card, .card2 {
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 1s forwards;
@@ -83,4 +84,19 @@ body {
 }
 .card:nth-child(2){
     animation-delay: 0.4s;
+}
+.card2 {
+    background-color: #ffffff ;
+    border-radius: 50px;
+    text-align: center;
+    width: 400px;
+    padding: 20px;
+    box-shadow: 0 2px 8px rgba(o,o,o,o.1);
+}
+.fitness-img {
+    border-radius: 50%;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
