--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body {
     .container {
         flex-direction: column;
         align-items: center;
+        padding: 100px;
     }
     .card, .card2 {
         width: 90%;
