--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
     .container {
         flex-direction: column;
         align-items: center;
-        padding: 100px;
+        padding-top: 320px;
     }
     .card, .card2 {
         width: 90%;
